clusters/infrastructure/prod/app/gowitness/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gowitness
  labels:
    goldilocks.fairwinds.com/enabled: "true"
