clusters/infrastructure/prod/app/gowitness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowitness
  namespace: gowitness
spec:
  selector:
    app: gowitness
  ports:
    - name: http
      port: 80
      targetPort: 7171
