clusters/infrastructure/prod/app/gowitness/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowitness
  namespace: gowitness
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authelia-chain-authelia-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: gowitness.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gowitness
                port:
                  number: 80
